Added an option, "DisableInternalPluginHandling", that allows the user to disable the internal handling of flash and java applets.

Currently it lacks GUI configuration, but it can be activated by adding the
aforementioned option to the "General" section of $KDEHOME/share/config/kwebkitpartrc
and setting it to "true".

BUG: 232736
FIXED-IN: 4.9.0